# Revitar2

./: LICENSE  LICENSE.md  README.md
Revitar/: ATTRIB  LICENSE.txt  Makefile  RevEditor.cpp  RevEditor.h  Revitar.cpp  Revitar.def  Revitar.h  Revitar.rc  TODO  controls.cpp  controls.h  displayScreen.cpp  presets.cpp  resource.h
Revitar/nbproject/: Makefile-Debug.mk  Makefile-Debug_VST3.mk  Makefile-Debug_VSTGUI3.0.mk  Makefile-Debug_VSTGUI3.6.mk  Makefile-Debug_x64.mk  Makefile-Debug_x64_VSTGUI3.0.mk  Makefile-Debug_x64_VSTGUI3.6.mk  Makefile-Release.mk  Makefile-Release_VST3.mk  Makefile-Release_VSTGUI3.0.mk  Makefile-Release_VSTGUI3.6.mk  Makefile-Release_x64.mk  Makefile-Release_x64_VSTGUI3.0.mk  Makefile-Release_x64_VSTGUI3.6.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_VST3.bash  Package-Debug_VSTGUI3.0.bash  Package-Debug_VSTGUI3.6.bash  Package-Debug_x64.bash  Package-Debug_x64_VSTGUI3.0.bash  Package-Debug_x64_VSTGUI3.6.bash  Package-Release.bash  Package-Release_VST3.bash  Package-Release_VSTGUI3.0.bash  Package-Release_VSTGUI3.6.bash  Package-Release_x64.bash  Package-Release_x64_VSTGUI3.0.bash  Package-Release_x64_VSTGUI3.6.bash  configurations.xml  project.xml
Revitar/nbproject/private/: configurations.xml
Revitar/originaldocs/: ReadMe.txt  kvrreadme.txt
Revitar/res/: All8Beta4-new.xcf  about-new.xcf  librevitar.vstxml  preset.fxb  vst.manifest
Revitar/vst3sdk/nbproject/: Makefile-Debug.mk  Makefile-Debug_VST2.mk  Makefile-Debug_VST2WRAP.mk  Makefile-Debug_VST2WRAP_GUI3.6.mk  Makefile-Debug_VST2_GUI3.6.mk  Makefile-Debug_VST3.mk  Makefile-Debug_VST3_GUI3.6.mk  Makefile-Debug_x64.mk  Makefile-Debug_x64_VST2.mk  Makefile-Debug_x64_VST2WRAP.mk  Makefile-Debug_x64_VST2WRAP_GUI3.6.mk  Makefile-Debug_x64_VST2_GUI3.6.mk  Makefile-Debug_x64_VST3.mk  Makefile-Debug_x64_VST3_GUI3.6.mk  Makefile-Release.mk  Makefile-Release_VST2.mk  Makefile-Release_VST2WRAP.mk  Makefile-Release_VST2WRAP_GUI3.6.mk  Makefile-Release_VST2_GUI3.6.mk  Makefile-Release_VST3.mk  Makefile-Release_VST3_GUI3.6.mk  Makefile-Release_x64.mk  Makefile-Release_x64_VST2.mk  Makefile-Release_x64_VST2WRAP.mk  Makefile-Release_x64_VST2WRAP_GUI3.6.mk  Makefile-Release_x64_VST2_GUI3.6.mk  Makefile-Release_x64_VST3.mk  Makefile-Release_x64_VST3_GUI3.6.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_VST2.bash  Package-Debug_VST2WRAP.bash  Package-Debug_VST2WRAP_GUI3.6.bash  Package-Debug_VST2_GUI3.6.bash  Package-Debug_VST3.bash  Package-Debug_VST3_GUI3.6.bash  Package-Debug_x64.bash  Package-Debug_x64_VST2.bash  Package-Debug_x64_VST2WRAP.bash  (+20 more)
Revitar/vst3sdk/vstgui.sf/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libtool  mmBOOL.patch
Revitar/vst3sdk/vstgui.sf/nbproject/: Makefile-Debug.mk  Makefile-Debug_x64.mk  Makefile-Release.mk  Makefile-Release_x64.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_x64.bash  Package-Release.bash  Package-Release_x64.bash  configurations.xml  project.xml
Revitar/vstsdk2.4/nbproject/: Makefile-Debug.mk  Makefile-Debug_x64.mk  Makefile-Release.mk  Makefile-Release_x64.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_x64.bash  Package-Release.bash  Package-Release_x64.bash  configurations.xml  project.xml
Revitar/vstsdk2.4/vstgui.sf/nbproject/: Makefile-Debug.mk  Makefile-Debug_x64.mk  Makefile-Release.mk  Makefile-Release_x64.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_x64.bash  Package-Release.bash  Package-Release_x64.bash  project.xml
